flux/apps/base/podinfo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: podinfo-alb
  namespace: podinfo
  annotations:
    # If an Ingress doesn't specify a class, it will use the Default
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: eks.amazonaws.com/alb
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    name: podinfo-alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  namespace: podinfo
spec:
  ingressClassName: podinfo-alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: podinfo
                port:
                  number: 80
